test/tests/compiler/8_loops/valid/for_decl.plx
pub fn main(none) i32 {
    a: i32 = 0

    loop i: i32 = -100 while i <= 0 .. i = i + 1 {
        a = a + 1
    }
    return a
}

