test/tests/compiler/8_loops/invalid_semantics/out_of_scope_loop_variable.plx
pub fn main(none) i32 {
    loop i = 0 while i < 1 .. i = i + 1    {
        return 0
    }
}
